--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "kkamara/php-autoloading",
+    "name": "kkamara/php-traits",
     "type": "project",
     "license": "BSD-3-Clause",
     "authors": [
